fix the overflow content on the main browser on tablet screen size

--- a/src/components/MainBrowser/MainBrowser.scss
+++ b/src/components/MainBrowser/MainBrowser.scss
@@ -4,6 +4,8 @@
 .card {
     width: 100%;
     border-radius: 4px;
+    box-sizing: border-box;
+    overflow-x: hidden;
     background-color: $white;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
