--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -4,6 +4,7 @@
 .table {
     width: 100%;
     height: 100%;
+    overflow-x: auto;
     background-color: $white;
     border-collapse: collapse;
 
